--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,35 @@
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
+# compiled output
+/dist
+/tmp
 
-# Sensitive or high-churn files:
-.idea/dataSources/
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
+# dependencies
+/node_modules
+/bower_components
 
-# Gradle:
-.idea/gradle.xml
-.idea/libraries
+# IDEs and editors
+/.idea
+/.vscode
+.project
+.classpath
+.c9/
+*.launch
+.settings/
 
-# Mongo Explorer plugin:
-.idea/mongoSettings.xml
+# misc
+/.sass-cache
+/connect.lock
+/coverage/*
+/libpeerconnection.log
+npm-debug.log
+testem.log
+/typings
 
-## File-based project format:
-*.iws
+# e2e
+/e2e/*.js
+/e2e/*.map
 
-## Plugin-specific files:
-
-# IntelliJ
-/out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+#System Files
+.DS_Store
+Thumbs.db
