--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.9",
+    "retyped-fabricjs-tsd-ambient": "^1.5.0-0",
     "ts-node": "1.2.1",
     "tslint": "^4.0.2",
     "typescript": "~2.0.3",
